server/cloud-infra/k8s/overlays/do-prod/ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: crs-ingress
spec:
  rules:
    - host: do.crs.example.com
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: crs-api
                port:
                  number: 80
          - path: /socket.io
            pathType: Prefix
            backend:
              service:
                name: crs-api
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: crs-web
                port:
                  number: 80
  tls:
    - hosts:
        - do.crs.example.com
      secretName: crs-do-prod-tls
